# doc-search-test

./: .gitignore  Cargo.toml  README.md
report/: rp.md
src/: cli.rs  indexer.rs  main.rs  tokenize.rs
