[package]
name = "doc-search-test"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
ciborium = "0.2"
tf-idf-vectorizer = "0.10.3"
sudachi =  { git = "https://github.com/sorami/sudachi.rs.git", tag = "v0.6.10" }
indicatif = "0.18.3"
flume = "0.12.0"
jwalk = "0.8"
clap = { version = "4.3", features = ["derive"] }
half = { version = "2.7.1", features = ["serde", "bytemuck"] }
mimalloc = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"